Refined desktop view of blog card, additional fixes and refinements to font and spacing, added learning category with border radius and yellow background.

--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,84 @@
 /* Primary Styling */
 
 body {
+  background-color: var(--yellow);
+  font-family: "Figtree", sans-serif;
+  font-optical-sizing: auto;
+  min-height: 100vh;
+
   p {
     font-size: 16px;
+    font-weight: 500;
+  }
+}
+
+.card-container {
+  align-items: center;
+  background-color: var(--white);
+  border-radius: 20px;
+  box-shadow: 10px 10px 0px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5% auto;
+  max-width: 400px;
+  padding: 20px;
+}
+
+.card-image {
+  border-radius: 10px;
+  width: 100%;
+}
+
+.card-category {
+  h2 {
+    background-color: var(--yellow);
+    border-radius: 8px;
+    font-size: 20px;
+    font-weight: 800;
+    max-width: 100px;
+    padding: 10px;
+    text-align: center;
+  }
+}
+
+.card-title {
+  font-size: 26px;
+  font-weight: 800;
+}
+
+.card-text {
+  color: var(--grey);
+  line-height: 25px;
+}
+
+.author-container {
+  color: var(--black);
+  display: flex;
+  gap: 15px;
+
+  .author-image {
+    max-width: 50px;
+  }
+
+  p {
+    font-weight: 800;
   }
 }
 
 .attribution {
   font-size: 11px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
   text-align: center;
+
+  a {
+    color: hsl(228, 45%, 44%);
+  }
 }
 
-.attribution a {
-  color: hsl(228, 45%, 44%);
+/* Media Queries */
+@media screen and (max-width: 375px) {
 }
